# financial-jupyter-notebooks

./: LICENSE  README.md  capm_analysis.ipynb  pyproject.toml  stock_precious_metals_analysis.ipynb
