[project]
name = "financial-jupyter-notebooks"
version = "0.1.0"
description = "experimental jupyter notebooks on various financial topics"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "yfinance>=0.2.65",
]
